fix iframe/form overflow

--- a/css/style.css
+++ b/css/style.css
@@ -236,3 +236,11 @@ nav > ul li label {
 fieldset {
 	border: 1px solid black;
 }
+form label {
+	display: inline-block !important;
+	width: 14ex !important;
+}
+form input[type="submit"] {
+	border-radius: 0.5ex !important;
+	margin: 0.3ex !important;
+}
